--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mrh5493.edu.psu.doodlepadpro">
 
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -29,6 +34,16 @@
             android:name=".Drawing"
             android:label="@string/title_activity_drawing"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".AddImage"
+            android:label="@string/title_activity_add_image"
+            android:noHistory="true"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="mrh5493.edu.psu.doodlepadpro.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
